# mshell

./: .gitattributes  .gitignore  Cargo.toml  README.md  _build_app.bat  _run_dev.bat  _start_tauri_dev.bat  index.html  launch_now.cmd  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/icons/: icon.icns
crates/app/src/: error_map.rs  lib.rs  main.rs  state.rs
crates/app/src/commands/: connection.rs  host_key.rs  mod.rs  serial.rs  session.rs  settings.rs  sftp.rs  terminal.rs  tunnel.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/ssh-core/: Cargo.toml
crates/ssh-core/src/: auth.rs  creds.rs  error.rs  host_key.rs  jump.rs  lib.rs  local.rs  serial.rs  session.rs  sftp.rs  ssh_config.rs  telnet.rs  terminal.rs  transfer.rs  tunnel.rs
crates/ssh-core/tests/fixtures/: main_config
crates/ssh-core/tests/fixtures/includes/: extra.conf
crates/store/: Cargo.toml
crates/store/src/: connections.rs  error.rs  lib.rs  paths.rs  settings.rs
scripts/: build.sh
src/: App.tsx  index.css  main.tsx
src/app/: Shell.tsx
src/components/command/: CommandPalette.tsx
src/components/connection/: ConnectionDialog.tsx  HostKeyDialog.tsx
src/components/editor/: EditorTabs.tsx  FileEditor.tsx
src/components/files/: FilesView.tsx  RemoteEntryRow.tsx
src/components/layout/: ActivityBar.tsx  SidePanel.tsx  TitleBar.tsx  TransferBar.tsx
src/components/sessions/: SessionList.tsx  SessionListItem.tsx
src/components/settings/: SettingsView.tsx
src/components/terminal/: TerminalTabs.tsx  TerminalView.tsx
src/components/tunnels/: TunnelsView.tsx
src/components/ui/: ContextMenu.tsx  OnboardingTip.tsx  ShortcutHelp.tsx  Toast.tsx
src/lib/: events.ts  findHotkey.ts  layoutPersist.ts  tauri.ts  terminalGeometry.ts  themes.ts
src/lib/__tests__/: core-logic.test.ts  layout-and-geometry.test.ts
src/stores/: connections.ts  sessions.ts  settings.ts  snippets.ts  transfers.ts  ui.ts
src/types/: protocol.ts
